# competitor-block-capture

./: .env.example  .gitignore  OPERATIONS.md  README.md  SETUP.md  pyproject.toml
config/: listing-os.example.json
docs/: ARCHITECTURE.md  NOTION_OS.md  RESEARCH_OS.md
docs/research/: cross-genre-comparison-listing-blocks.md  houkei-comparison-listing-blocks.md  marriage-agency-direct-competitors.md
examples/fixtures/: hair-transplant-serp.json  marriage-agency-serp.json
examples/offers/: hair-transplant-offers.json  marriage-agency-offers.json
examples/queries/: hair-transplant.txt  marriage-agency.txt
examples/research/: marriage-agency-source-documents.json  marriage-agency-v2-source-documents.json
learning/: approved_rules.example.json  feedback_log.example.jsonl
listing_os/: __init__.py  cli.py  config.py  normalization.py  workflows.py
research_os/: __init__.py  cleanup.py  cli.py  extractors.py  models.py  notion_payloads.py  notion_schema.py  notion_workspace.py  openai_research.py  runner.py  sources.py  web.py
tests/: test_normalization.py  test_notion_ids.py  test_notion_pages.py  test_notion_schema.py  test_research_os_cleanup.py  test_research_os_competitor.py  test_research_os_models.py  test_research_os_notion_payloads.py  test_research_os_pipeline.py  test_research_os_schema.py  test_research_os_v2_agents.py  test_research_os_v2_block_capture.py  test_research_os_v2_multi_category.py  test_research_os_v2_pipeline.py  test_research_os_v2_quality.py  test_research_os_v2_schema.py  test_research_os_web.py  test_workflows.py
(+29 files in other folders)
